@@ -3400,7 +3400,7 @@ TAO_CodeGen::gen_conn_hdr_includes (void)
             this->gen_conn_ts_includes (
               idl_global->ciao_oci_ts_file_names ());
             break;
-          case BE_GlobalData::NONE:
+          case BE_GlobalData::DDS_NONE:
             break;
         }
     }
